--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <li class="nav-item "><a class="nav-link" href="#Projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#Experience">My Experience</a></li>
           <li class="nav-item "><a class="nav-link" href="#Education">Education</a></li>
-          <li class="nav-item "><a href="mailto:contact@erzkle.in" class ="nav-link"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+          <li class="nav-item "><a href="mailto:contact@erezklein2@gmail.com" class ="nav-link"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
           <li class="nav-item "><a href="http://linkedin.com/in/erez-klein-b3257b97" class ="nav-link" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
         </ul>
       </div>
@@ -122,12 +122,24 @@
       <div class="container-mini-data container info-right">
         <div class="row">
           <div class="col-md-7 col-sm-7">
+            <img class="logos" src="img/nvidia_logo2.png">
+          </div>
+          <div class="col-md-5 col-sm-5">
+            <h4>Senior F.W. Algorithms Engineer </h4>
+            <h5>Mar 2020 - present</h5>
+            <p>Currently working as a firmware algorithms engineer at Nvidia.</p>
+          </div>
+        </div>
+      </div>
+      <div class="container-mini-data container info-right">
+        <div class="row">
+          <div class="col-md-7 col-sm-7">
             <img class="logos" src="img/mellanox_logo.jpg">
           </div>
           <div class="col-md-5 col-sm-5">
-            <h4> F.W. Algorithms Engineer </h5>
-            <h5>Mar 2017 - present</h5>
-            <p>Currently working as a firmware algorithms engineer at Mellanox Technologies.</p>
+            <h4> F.W. Algorithms Engineer </h4>
+            <h5>Mar 2017 - Mar 2020</h5>
+            <p>In charge of implementing the algorithm firmware for the Mellanox Technologies HDR optic module.</p>
           </div>
         </div>
       </div>
@@ -144,11 +156,23 @@
         </div>
       </div>
     </section>
-    <section id="Education">
       <div class="container-data container info-right">
         <div class="row">
           <div class="col-md-3 col-sm-3">
             <h2>Education</h2>
+          </div>
+        </div>
+      </div>
+      <section id="Education">
+      <div class="container-mini-data container info-right">
+        <div class="row">
+          <div class=" col-md-7 col-sm-7">
+            <img class="img logos" src="img/Stanford_logo.png" >
+          </div>
+          <div class="col-md-5 col-sm-5">
+            <h4>MSc Course in Computer Science</h4>
+            <h5>2021</h5>
+            <p>CS221 - Artificial Intelligence: Principles and Techniques.<br> Final project: </p>
           </div>
         </div>
       </div>
