--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
         <div class="container-data container">
           <div class="row">
             <div class="col-md-6 col-sm-6">
-              <h3>Nerual Netwrok AI - Drop7</h3>
-              <p>Beating Drop7 by harnesting the power of a neural network. In this project I Implement a N.E.A.T. (NeuroEvolution of Augmenting Topologies).</p>
-              <button type="button" class="btn btn-outline-secondary homefade pull-right ">Coming Soon</button></a>
+              <h3> Drop7 - Q learning</h3>
+              <p>Beating Drop7 by harnesting the power of Q learning. In this project I Implementend with Ben Friedman as a final project a Q learning algorithm to beat Drop7.</p>
+              <a href="drop7_q_learning.pdf" class="btn btn-outline-primary homefade pull-right ">Read More</button></a>
             </div>
             <div class="col-md-6 col-sm-6 text-center">
             <!--<img class="img" src="img/mario.png">-->
@@ -127,7 +127,7 @@
           <div class="col-md-5 col-sm-5">
             <h4>Senior F.W. Algorithms Engineer </h4>
             <h5>Mar 2020 - present</h5>
-            <p>Currently working as a firmware algorithms engineer at Nvidia.</p>
+            <p>Currently working as an algorithms firmware engineer at Nvidia.</p>
           </div>
         </div>
       </div>
@@ -172,7 +172,7 @@
           <div class="col-md-5 col-sm-5">
             <h4>MSc Course in Computer Science</h4>
             <h5>2021</h5>
-            <p>CS221 - Artificial Intelligence: Principles and Techniques.<br> Final project: </p>
+            <p>CS221 - Artificial Intelligence: Principles and Techniques.<br> Final project: Beating the Mobile Game of Drop7 </p>
           </div>
         </div>
       </div>
