--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <a href="drop7_q_learning.pdf" class="btn btn-outline-primary homefade pull-right ">Read More</button></a>
             </div>
             <div class="col-md-6 col-sm-6 text-center">
-            <img class="img" src="img/test_curve_random_human4.png">
+            <img class="q_learning" src="img/test_curve_random_human4.png">
             </div>
           </div>
         </div>
